- 2003-07-29	leo

	* version 0.0.10.2
	* first try on implementing PCC from docs/calling_conventions.pod
	  - no optimizations
	  - only upper half of registers are preserved
	  - s. t/imcpasm/pcc.t for generated code

- 2003-07-09	leo

	* version 0.0.10.1
	* -E, --pre-process-only

- 2003-07-06	leo

	* new instruction:
	  $Preg = new classname, $Pinitializer

- 2003-07-03	leo

	* switch to PASM/PIR mode, when reading .pasm/.imc include files
	* search runtime/parrot/include too for includes

- 2003-07-02	leo

	* build imcc as parrot
	* bump version

	-------------------
	* various fixes
	* newsub opcode fixup
	* constant_propagation (-O2) (by Matt Fowles)

- 2003-02-22	leo / Juergen Boemmels

	* correct line numbers for debugger WRT macros
	  (thanks to Juergen Boemmels)
	* first try to get effects of clear?, pop?, restoreall
	  ops into register life info

- 2003-02-21	leo

	* version 0.0.9.15
	* opimized some ugly quadratic timings in cfg building
	  and branch optimizations by:
	* build bb_list earlier and use basic blocks
	  This improves e.g.  -O2 t/op/stacks_33 from >1m to 2s

	* absolute experimental and early stages for using imcc
	  as JIT optimizer (-Oj) this is broken WRT rx_ops, which
	  have an inout INT param and can branch, and WRT NCI/invoke
	  and probably a lot more.

- 2003-02-20	leo / Juergen Boemmels

	* version 0.0.9.14
	* macro preprocessor - thanks Juergen Boemmels
	  s. docs/macros.pod

	* lot of constants optimizations, like add I0, 10, 20
	* reorganized optimization levels
	* run allocate for PASM code too, if optimizing

- 2003-02-08 	leo
        * changed branch_branch to optimize a sequence of absolute
	  branches to branch to the final target
	* dead blocks removal
	* unreachable lines removal

	  *****************************************************
	  make the long announced rule fix:
	  o global labels MUST start with an underscore
	  o labels of bsr calls are global
	  o labels of set_addr op are global